# sinergox

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
sinergox/: __init__.py  client.py
src/sinergox/: __init__.py  client.py
tests/: __init__.py  test_client.py  test_integration.py  test_pandas_support.py
