[project]
name = "sinergox"
version = "0.4.0"
description = "A Python client for the Sinergox API (Colombian energy market data)."
readme = "README.md"
authors = [{ name = "pablete", email = "jtamayoh@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "pyarrow>=14.0", "textdistance>=4.6"]

[project.optional-dependencies]
pandas = ["pandas>=2.1"]

[dependency-groups]
dev = ["pytest>=8.2", "pandas>=2.1"]

[tool.pytest.ini_options]
markers = ["integration: tests that hit the live Sinergox API"]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
